<resources>
    <string name="app_name">QuanLyChiTieu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="use">Tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="fb">Facebook</string>
    <string name="GG">Google</string>
    <string name="xnu">Xin hãy nhập tên tài khoản</string>
    <string name="xnp">Xin hãy nhập mật khẩu</string>
</resources>