<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <RelativeLayout android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".dangnhap"
      android:background="@drawable/bb">

    <EditText
        android:id="@+id/pass"
        android:layout_width="338dp"
        android:layout_height="59dp"
        android:layout_below="@+id/use"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/tuybienthanh"
        android:ems="10"
        android:hint="@string/xnp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/use" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="147dp"
        android:text="@string/dangnhap"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/use"
        android:layout_width="338dp"
        android:layout_height="59dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/tuybienthanh"
        android:ems="10"
        android:hint="@string/xnu"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/ck1"
        android:layout_width="151dp"
        android:layout_height="35dp"
        android:layout_below="@+id/pass"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="37dp"
        android:text="CheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/button"
        android:layout_width="271dp"
        android:layout_height="53dp"
        android:layout_below="@+id/pass"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="97dp"
        android:background="@drawable/tuybiennut"
        android:text="@string/dangnhap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ck1" />

    <Button
        android:id="@+id/fb"
        android:layout_width="187dp"
        android:layout_height="66dp"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/tuybiennut"
        android:text="@string/fb"
        app:layout_constraintEnd_toStartOf="@+id/gg"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/gg"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/tuybiennut"
        android:text="@string/GG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/btndangkytk"
        android:layout_width="210dp"
        android:layout_height="61dp"
        android:layout_below="@+id/gg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="93dp"
        android:text="Đăng ký tài khoản"
        android:background="@drawable/tuybiennut"/>
  </RelativeLayout>
</ScrollView>